--- a/assets/scss/ludwig.scss
+++ b/assets/scss/ludwig.scss
@@ -3,3 +3,25 @@
         width: 100%;
     }
 }
+
+.playground {
+    width: 100%;
+    display: grid;
+
+    height: 40rem;
+    grid-template-rows: 1fr auto;
+    textarea {
+        resize: none;
+
+        background-color: rgb(27, 31, 34);
+
+        border: 1px solid gray;
+        color: white;
+
+        width: 100%;
+        height: 100%;
+    }
+    button {
+        width: 100%;
+    }
+}
