Move ludwig.js to assets again

--- a/layouts/partials/footer/script-footer.html
+++ b/layouts/partials/footer/script-footer.html
@@ -74,6 +74,10 @@
 {{ $playludwig := resources.Get "js/play-ludwig.js" -}}
 <script src="{{ $playludwig.RelPermalink }}" type="module"></script>
 
+{{ $ludwig := resources.Get "js/ludwig.js" -}}
+<script src="{{ $ludwig.RelPermalink }}" type="module"></script>
+
+
 {{ $js := $slice | resources.Concat "main.js" -}}
 
 {{ if eq (hugo.Environment) "development" -}}
