Make the index more responsive

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,8 @@
 {{ define "main" }}
+<script>
+document.body.parentElement.style = "height: 100%"
+document.body.style="height: 100%; display: grid"
+</script>
 <section class="section container-fluid justify-content-center">
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
